trying to fix mobile overflow bug that just popped up

--- a/assets/styles/v1/mixins.sass
+++ b/assets/styles/v1/mixins.sass
@@ -28,5 +28,7 @@
     @include media-breakpoint-up(lg, $v1-grid-breakpoints)
       max-width: 80vw
       margin: auto auto
+  h5
+    font-size: .7em
 
 
